Split out azureMonitorMetricsClient and refactor